[gd_scene load_steps=10 format=3 uid="uid://b247jdfxcrwo"]

[ext_resource type="PackedScene" uid="uid://dymwmjhry3w1s" path="res://scenes/Actor.tscn" id="1_66ha1"]
[ext_resource type="Script" path="res://scenes/HUDLayer.gd" id="2_mj5bg"]
[ext_resource type="Script" path="res://scenes/Player.gd" id="2_tnq84"]
[ext_resource type="Theme" uid="uid://dnn8dbcm7eoww" path="res://gfx/World.tres" id="3_5ho1r"]
[ext_resource type="Script" path="res://scenes/LogContainer.gd" id="4_vwrx6"]
[ext_resource type="Script" path="res://scenes/InventoryPanel.gd" id="5_2ygax"]
[ext_resource type="PackedScene" uid="uid://d0cowy6nuu2f4" path="res://scenes/Inventory.tscn" id="6_yncj6"]
[ext_resource type="AudioStream" uid="uid://bxs1ygyldymr2" path="res://sfx/pickupGold.wav" id="8_75p11"]
[ext_resource type="PackedScene" uid="uid://bpvyuiu7qaih8" path="res://scenes/Weapon.tscn" id="9_yipu8"]

[node name="Player" instance=ExtResource("1_66ha1")]
script = ExtResource("2_tnq84")

[node name="TreasureSound" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource("8_75p11")

[node name="Inventory" parent="." index="4" instance=ExtResource("6_yncj6")]

[node name="Weapon" parent="." index="5" instance=ExtResource("9_yipu8")]

[node name="Camera2D" type="Camera2D" parent="." index="6"]

[node name="HUDLayer" type="CanvasLayer" parent="." index="7"]
script = ExtResource("2_mj5bg")

[node name="Labels" type="VBoxContainer" parent="HUDLayer" index="0"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_5ho1r")

[node name="HP" type="Label" parent="HUDLayer/Labels" index="0"]
layout_mode = 2
text = "HP: ?/?"

[node name="Gold" type="Label" parent="HUDLayer/Labels" index="1"]
layout_mode = 2
text = "Gold: ?"

[node name="Turn" type="Label" parent="HUDLayer/Labels" index="2"]
layout_mode = 2
text = "Turn: ?"

[node name="Floor" type="Label" parent="HUDLayer/Labels" index="3"]
layout_mode = 2
text = "Floor: ?"

[node name="InventorySpace" type="Label" parent="HUDLayer/Labels" index="4"]
layout_mode = 2
text = "Inventory: ?/26"

[node name="LogContainer" type="ScrollContainer" parent="HUDLayer" index="1"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -115.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("3_5ho1r")
script = ExtResource("4_vwrx6")

[node name="EntryContainer" type="VBoxContainer" parent="HUDLayer/LogContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2

[node name="Label" type="Label" parent="HUDLayer/LogContainer/EntryContainer" index="0"]
layout_mode = 2
text = "Welcome to GAME!"

[node name="NextFloorCurtains" type="ColorRect" parent="HUDLayer" index="2"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5ho1r")
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="HUDLayer/NextFloorCurtains" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -13.0
offset_right = 89.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Generating next floor..."

[node name="InventoryPanel" type="Panel" parent="HUDLayer" index="3"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5ho1r")
script = ExtResource("5_2ygax")

[node name="ItemLabels" type="VBoxContainer" parent="HUDLayer/InventoryPanel" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -154.0
offset_right = 120.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HUDLayer/InventoryPanel" index="1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_right = 72.0
offset_bottom = 35.0
grow_horizontal = 2
text = "Inventory"

[node name="HoveredOver" type="Label" parent="HUDLayer" index="4"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_right = 67.5
offset_bottom = 26.0
grow_horizontal = 2
